# Shooty

./: .gitignore  CMakeLists.txt  README.md  aircraft.cpp  aircraft.h  application.cpp  application.h  command.h  config.toml  configuration.cpp  configuration.h  entity.h  game.cpp  game.h  lifebar.cpp  lifebar.h  main.cpp  music.cpp  particle.h  player.cpp  player.h  resources.cpp  resources.h  scene.cpp  scene.h  state.cpp  state.h  textures.cpp  textures.h  tomlpp.h  utility.cpp  utility.h  world.cpp  world.h
Book/03_World/: a.out
effects/: bloom.h  post_effect.h
entity/: aircraft.cpp  aircraft.h  bullet.cpp  bullet.h  enemy.cpp  enemy.h  entity.h  flight.h  leader.cpp  leader.h  missile.cpp  missile.h  pickup.cpp  pickup.h  projectile.cpp  projectile.h
gui/: button.cpp  button.h  component.cpp  component.h  container.cpp  container.h  label.h
src/: action.h  application.h  bindings.cpp  lifebar.h  music.h  player.cpp  player.h  resources.cpp  scene.cpp  scene.h  sound.cpp  sound.h  utility.cpp  world.cpp
src/effects/: bloom.cpp
src/entity/: bullet.h  enemy.cpp  entity.h  explosion.h  projectile.cpp
src/gui/: button.cpp  button.h  component.cpp  container.cpp  container.h  label.h
src/state/: game.h  id.h  pause.cpp  settings.h  title.h
state/: game.cpp  game.h  game_over.cpp  id.h  menu.cpp  menu.h  pause.cpp  pause.h  settings.cpp  settings.h  stack.h  title.cpp
